CustomerClient to CreateCredits and GlobalExceptionHandler
